<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">bogdan-polk1@yandex.ru</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
</resources>
