<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/menu_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/normal_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_btn"
            style="@style/menu_bnt_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/ic_search"/>

        <Button
            android:id="@+id/media_btn"
            style="@style/menu_bnt_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/media"
            app:icon="@drawable/ic_media"/>

        <Button
            android:id="@+id/settings_btn"
            style="@style/menu_bnt_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"/>

    </LinearLayout>


</LinearLayout>