<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backBtn"
            style="@style/menu_bnt_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            app:icon="@drawable/light_mode" />
        <TextView
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="12dp"
            android:text="@string/settings" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_element_layout_height"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal"
        style="@style/settings_fl_list">

        <TextView
            style="@style/normal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:text="@string/dark_theme"/>

        <Switch
            style="@style/settings_switch_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="6dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_element_layout_height"
        android:orientation="horizontal"
        style="@style/settings_fl_list">

        <TextView
            style="@style/normal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:text="@string/share_app" />

        <ImageView
            style="@style/settings_icon_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:src="@drawable/share_app"
            android:contentDescription="TODO" />
    </FrameLayout>

    <FrameLayout
        style="@style/settings_fl_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_element_layout_height"
        android:orientation="horizontal">

        <TextView
            style="@style/normal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:text="@string/write_to_support" />

        <ImageView
            style="@style/settings_icon_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:src="@drawable/write_to_support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_element_layout_height"
        style="@style/settings_fl_list"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            style="@style/normal_text_style"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:text="@string/user_agreement"/>

        <ImageView
            style="@style/settings_icon_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:src="@drawable/arrow_forward"/>
    </FrameLayout>
</LinearLayout>